Bundle Methods for Regularized Risk Minimization

--- a/shogun_tutorial.tex
+++ b/shogun_tutorial.tex
@@ -16,9 +16,10 @@
 \date{\today}
 \author
 {
-Sergey Lisitsyn \and 
-Heiko Strathmann \and 
-Chiyuan Zhang \and 
+Sergey Lisitsyn \and
+Heiko Strathmann \and
+Chiyuan Zhang \and
+Michal U\v{r}i\v{c}\'{a}\v{r} \and
 }
 
 \begin{document}
@@ -30,8 +31,8 @@ Chiyuan Zhang \and
     with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
     A copy of the license is included in the section entitled ``GNU
     Free Documentation License''.
-    
-    
+
+
 	\tableofcontents
 	\listoftodos
 	\part{Essentials}
@@ -41,12 +42,13 @@ Chiyuan Zhang \and
 	\input{parts/algorithms/multiclass}
 	\input{parts/algorithms/statistical_tests}
 	\input{parts/algorithms/multitask}
-	
-	
+	\input{parts/algorithms/bundle_methods}
+
+
 	\begin{appendix}
 	\input{parts/appendix/license}
 	\end{appendix}
-	
+
 	\bibliographystyle{apalike}
-	\bibliography{biblio} 
+	\bibliography{biblio}
 \end{document}
