--- a/biblio.bib
+++ b/biblio.bib
@@ -1,19 +1,3 @@
-@article{EscaleraPR09,
-  author    = {Sergio Escalera and
-               Oriol Pujol and
-               Petia Radeva},
-  title     = {Separability of ternary codes for sparse designs of error-correcting
-               output codes},
-  journal   = {Pattern Recognition Letters},
-  volume    = {30},
-  number    = {3},
-  year      = {2009},
-  pages     = {285-297},
-  ee        = {http://dx.doi.org/10.1016/j.patrec.2008.10.002},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
-
-
 @article{Gretton2012,
 abstract = {We propose a framework for analyzing and comparing distributions, which we use to construct sta- tistical tests to determine if two samples are drawn from different distributions. Our test statistic is the largest difference in expectations over functions in the unit ball of a reproducing kernel Hilbert space (RKHS), and is called the maximum mean discrepancy (MMD).We present two distribution- free tests based on large deviation bounds for the MMD, and a third test based on the asymptotic distribution of this statistic. TheMMD can be computed in quadratic time, although efficient linear time approximations are available. Our statistic is an instance of an integral probabilitymetric, and various classical metrics on distributions are obtained when alternative function classes are used in place of an RKHS. We apply our two-sample tests to a variety of problems, including attribute matching for databases using the Hungarian marriage method, where they perform strongly. Ex- cellent performance is also obtainedwhen comparing distributions over graphs, forwhich these are the first such tests.},
 author = {Gretton, Arthur and Borgwardt, Karsten M. and Rasch, Malte J. and Sch\"{o}lkopf, Bernhard and Smola, Alexander},
@@ -119,3 +103,39 @@ year = {2008}
   ee        = {http://www-2.cs.cmu.edu/Groups/NIPS/NIPS2001/papers/psgz/AA35.ps.gz},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+
+@InProceedings{Uricar-Franc-CVWW-2012,
+  author =      {U{\v{r}}i{\v{c}}{\'{a}}{\v{r}}, Michal and Franc, Vojt{\v{e}}ch },
+  title =       {{Efficient Algorithm for Regularized Risk Minimization}},
+  year =        {2012},
+  pages =       {57-64},
+  booktitle =   {{CVWW} '12: Proceedings of the 17th Computer Vision Winter Workshop},
+  editor =      {Kristan, Matej and Mandeljc, Rok and {\v C}echovin, Luka},
+  publisher =   {Slovenian Pattern Recognition Society},
+  address =     {Ljubljana, Slovenia},
+  isbn =        {978-961-90901-6-9},
+  book_pages =  {181},
+  month =       {February},
+  day =         {1-3},
+  venue =       {Mala Nedelja, Slovenia},
+  www = {http://cvww2012.vicos.si/},
+}
+
+@Article{Teo-BMRM-JMLR10,
+  author 	= {Teo, C.H. and Vishwanathan, S.V.N and Smola, A. and Quoc, V.Le},
+  title 	= {{Bundle Methods for Regularized Risk Minimization}},
+  journal 	= {Journal of Machine Learning Research},
+  year 		= {2010},
+  volume 	= {11},
+  pages 	= {311--365},
+}
+
+@Article{Tsoch-StructOutput05,
+  author        = {Tsochantaridis, I. and Joachims, T. and Hofmann, T. and Altun, Y. },
+  title         = {{Large Margin Methods for Structured and Interdependent Output Variables}},
+  journal       = {Journal of Machine Learning Research},
+  year          = {2005},
+  volume        = {6},
+  pages         = {1453--1484},
+}
+
